--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py36, py37, py38, py39, flake8
 
 [testenv:flake8]
 basepython=python
-deps=flake8
+deps=flake8>=3.9.2
 commands=flake8
 
 [testenv]
 deps =
-    pytest-cov
-    pytest
+    pytest-cov>=2.12.1
+    pytest>=6.2.5
 extras =
     test
 commands =
